2011-01-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (article-transform-date): Rewrite to still work when
	there are several rfc2822 parts.

	* nnimap.el (nnimap-wait-for-response): Wait for results in a more
	secure manner.

	* gnus-art.el (article-update-date-lapsed): Try to avoid having point
	move around by not using save-window-excursion.  It seems to work...

2011-01-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-make-date-line): Work for user-defined format.

2011-01-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* nntp.el (nntp-retrieve-group-data-early)
	(nntp-finish-retrieve-group-infos): Implement the asynchronous data
	fetching functions.

	* gnus-start.el (gnus-read-active-for-groups): Read the active files
	thoroughly for all backends that have no known groups.  This should
	allow new nnml methods to retrieve mail.

	* gnus-group.el (gnus-group-jump-to-group): Allow jumping to groups
	that Gnus doesn't know exists again.

	* gnus-art.el (gnus-article-date-lapsed-new-header): Removed.
	(gnus-treat-date-ut): Ditto.
	(gnus-article-update-date-header): Renamed.
	(gnus-treat-date-local): Removed.
	(gnus-treat-date-english): Removed.
	(gnus-treat-date-lapsed): Removed.
	(gnus-treat-date-combined-lapsed): Removed.
	(gnus-treat-date-original): Removed.
	(gnus-treat-date-iso8601): Removed.
	(gnus-treat-date-user-defined): Removed.
	(gnus-article-date-headers): New variable to control all the date
	header options.
	(article-date-ut): Rewrite to allow using the new way to format date
	headers(s).

2011-01-30  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnmail.el (nnmail-article-group): Check for a direct fancy split
	method.
	(nnmail-article-group): A better test for fanciness.

	* nnimap.el (nnimap-request-head): Protect against not finding the
	article by Message-ID.

2011-01-29  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (article-update-date-lapsed): Try a better way to really
	keep point at the "same place".
