@@ -2,6 +2,7 @@
 
 	* gnus-art.el (article-transform-date): Rewrite to still work when
 	there are several rfc2822 parts.
+	(article-transform-date): Fix infinite recursion.
 
 	* nnimap.el (nnimap-wait-for-response): Wait for results in a more
 	secure manner.
